docs : WIP Swagger
